--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h3>Crach Course</h3>
+    <h3 style="border:20px solid Tomato;">Crash Course</h3>
+
 </body>
 </html>
